              (see 'wythoff -c list'), extend colour by associated element
            conway: new format for conway operators with 2 numbers e.g L_n:r
              new operators added, B,E,G,W
              operators L, l and X may now take subscripts
              operator u, e and o may now take two subscripts
              base subscripts updated
              status reporting method update
              -p plarization options removed, now done internally
            off_color_radial:
              -m rainbow map entries calculated like rng
            canonical:
              -S, R, D coloring options added
              -O Output type convex hull added
              -c c circle packings, new algorithm added
              -C,-f new options for -c c
              -p p fast planarize added
              -p removed, (old p) face centroids and centroids magnitude
              -p removed, u make unit edge
              -x removed, normal types, since all normals are unit normals
              -r removed, initial radius, always nearpoints = 1
              -C removed, initial centering, always centered on edge nearpoints
              -A removed, alternate algorithm no longer needed
            build: compile with C++14
         Fixes
            usage helps reviewed and organized
            minor bug fixes and improvements
            major code review with fixes for potential issues

Version 0.27
01-10-20 Adrian Rossiter <adrian@antiprism.com>
         Changes
            off_color: new -e jJ to colour by edge length
            zono: -P add spirallohedra, new -T translation product
            conway: g and s take a numeric parameter
         Fixes
            off2vrml: avoid duplicate PROTO statements
            minor bug fixes and improvements

Version 0.26
05-04-19 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            rotegrity: make rotegrity and nexorade models
            mmop_origami: multimodular polyhedron origami models