@@ -102,15 +102,8 @@ E, F, or a colour, to colour local tiles by that element type
 (default: F), or colour all local tiles with a single colour
 .IP
 (when \fB\-f\fR w is set)
-.TP
-\fB\-R\fR <opt>
-built in seed coloring: one=1, unique=2, symmetry=3 (default: 1)
 .HP
 \fB\-T\fR <tran> face transparency. valid range from 0 (invisible) to 255 (opaque)
-.HP
-\fB\-O\fR <strg> face transparency pattern string (\fB\-f\fR n only). valid values
-.IP
-0 \- map color alpha value, 1 \fB\-T\fR alpha applied (default: '1')
 .HP
 \fB\-m\fR <maps> color maps for faces to be tried in turn (default: m1, for \fB\-g\fR, m2)
 .TP
